apps/pigeon/pigeon-relay/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pigeon-relay
spec:
  type: ClusterIP
  selector:
    app: pigeon-relay
  ports:
    - port: 80
      targetPort: http
